background not visible solved

--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@
 
     min-height: 100vh;
     width: 100vw;
-    background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)) ,url(/images/banner.png);
+    background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)) ,url(../images/banner.png);
     background-position: center;
     background-size: cover;
     position: relative;
